<resources>
    <string name="app_name">Keep It Safe and Secure</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Welcome</string>

    <!-- Strings related to login -->
    <string name="prompt_email" translatable="false">Email</string>
    <string name="prompt_password" translatable="false">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="null_text" translatable="false">@null</string>
    <string name="title_activity_conta">Account</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lbl_Info_Conta">Acconunt Info</string>
    <string name="hint_Conta_Login">Type Your Login Here</string>
    <string name="hint_Conta_Senha">Type Your Password Here</string>
    <string name="hint_Confirmar_Senha">Confirm Your Password Here</string>
    <string name="hint_Conta_Servidor">Type Here Your Server Address</string>
    <string name="hint_Conta_Porta">Type Here Your Port</string>
    <string name="btn_Conta_Salvar">Save Account</string>
    <string name="lbl_Servico">Service</string>
    <string name="lbl_UsaServidor">Has Server</string>
    <string name="lbl_UsaPorta">Has Port</string>
    <string name="btnServicos">Services</string>
    <string name="btn_contas">Accounts</string>
    <string name="btnAjustes">Settings</string>
    <string name="btnLogout">Logout</string>
    <string name="hint_email">Type your e-mail</string>
    <string name="hint_kiss_pass">Type Here your K.I.S.S password</string>
    <string name="btn_Login">Sign In</string>
    <string name="lbl_cadastre_se">Not registred yet?</string>
    <string name="btnRegistrar">Sign Up For Free</string>
    <string name="title_activity_cadastro">Register</string>
    <string name="lblNovaConta">New Keep It Safe and Secure account</string>
    <string name="hint_email_cadastro">Type your email</string>
    <string name="lbl_termos_de_uso">Use terms</string>
    <string name="ckd_de_acordo">I agree with the use terms</string>
    <string name="btn_cadastrar">Register</string>
    <string name="title_activity_lista_servico">Services</string>
    <string name="btn_novo_servico">New Service</string>
    <string name="title_activity_servico">New Service</string>
    <string name="title_activity_lista_conta">Saved Accounts</string>
    <string name="txt_Salvar">Save</string>
    <string name="txt_Deletar">Delete</string>
    <string name="txt_novo">New</string>
    <string name="txt_selecione_servico">Choose Service</string>
</resources>
