<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/colorBackground"
    tools:context="br.com.rafaelwms.kiss.activities.ContaActivity"
    android:id="@+id/layout_main_activity_conta"
    android:orientation="vertical"
    android:transitionGroup="false">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1"
        android:background="#ffffff">

        <ImageView
            android:layout_width="78dp"
            android:layout_height="78dp"
            android:id="@+id/imgServico_activity_conta"
            android:src="@mipmap/ic_launcher" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="78dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/null_text"
                android:id="@+id/txtNomeServico_activity_conta"
                android:gravity="center_horizontal" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/null_text"
                android:id="@+id/txtInfoServico" />

        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/lbl_Info_Conta"
        android:id="@+id/textView"
        android:gravity="center_vertical|center_horizontal"
        android:layout_marginTop="10dp"
        android:background="@color/colorPrimary"
        android:textColor="#ffffff" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:id="@+id/edt_Conta_Login"
            android:hint="@string/hint_Conta_Login"
            android:textColorHint="@color/colorPrimary"
            android:background="#ffffff"
            android:paddingLeft="7dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/edt_Conta_Senha1"
            android:layout_marginTop="15dp"
            android:background="#ffffff"
            android:hint="@string/hint_Conta_Senha"
            android:textColorHint="@color/colorPrimary"
            android:paddingLeft="7dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:id="@+id/edt_Conta_Senha2"
            android:layout_marginTop="15dp"
            android:background="#ffffff"
            android:hint="@string/hint_Confirmar_Senha"
            android:textColorHint="@color/colorPrimary"
            android:paddingLeft="7dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:id="@+id/edt_Conta_Servidor"
            android:background="#ffffff"
            android:layout_marginTop="15dp"
            android:textColorHint="@color/colorPrimary"
            android:hint="@string/hint_Conta_Servidor"
            android:paddingLeft="7dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/edt_Conta_Porta"
            android:layout_gravity="center_horizontal"
            android:background="#ffffff"
            android:layout_marginTop="15dp"
            android:maxLength="8"
            android:hint="@string/hint_Conta_Porta"
            android:textColorHint="@color/colorPrimary"
            android:paddingLeft="7dp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_Conta_Salvar"
            android:id="@+id/btn_Conta_Salvar"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp" />

    </LinearLayout>
</LinearLayout>
