<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/colorBackground"
    tools:context="br.com.rafaelwms.kiss.activities.CadastroActivity"
    android:orientation="vertical"
    android:weightSum="1">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/img_logo_kiss"
        android:layout_gravity="center_horizontal"
        android:src="@mipmap/add_user"
        android:layout_weight="0.23" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/lblNovaConta"
        android:id="@+id/lbl_nova_conta"
        android:layout_gravity="left|center"
        android:background="@color/colorPrimary"
        android:textColor="@color/colorWhite"
        android:textAlignment="center"
        android:layout_weight="0.03"
        android:gravity="center_vertical|center_horizontal|right" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/edt_Cadastro_Email"
        android:layout_gravity="center_horizontal"
        android:background="@color/colorWhite"
        android:layout_marginTop="10dp"
        android:paddingLeft="5dp"
        android:hint="@string/hint_email_cadastro" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/edt_cadastro_pass1"
        android:layout_gravity="center_horizontal"
        android:background="@color/colorWhite"
        android:layout_marginTop="10dp"
        android:hint="@string/hint_Conta_Senha"
        android:paddingLeft="5dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/edt_cadastro_pass2"
        android:layout_gravity="center_horizontal"
        android:background="@color/colorWhite"
        android:layout_marginTop="10dp"
        android:hint="@string/hint_Confirmar_Senha"
        android:paddingLeft="5dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lbl_termos_de_uso"
        android:id="@+id/lbl_termos_de_uso"
        android:textAlignment="center"
        android:layout_weight="0.03"
        android:background="@color/colorPrimary"
        android:textColor="@color/colorWhite"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical|center_horizontal|right" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView"
        android:layout_weight="0.5"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="Small Text"
            android:id="@+id/texto_termos_de_uso" />
    </ScrollView>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ckd_de_acordo"
        android:id="@+id/ckb_de_acordo"
        android:layout_gravity="center_horizontal"
        android:checked="false" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_cadastrar"
        android:id="@+id/btn_Cadastrar"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp" />
</LinearLayout>
