<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/colorBackground"
    tools:context="br.com.rafaelwms.kiss.activities.LoginActivity"
    android:orientation="vertical"
    android:weightSum="1">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/imgLoginUser"
        android:layout_gravity="center_horizontal"
        android:src="@mipmap/perfil"
        android:cropToPadding="false"
        android:focusable="false"
        android:layout_weight="0.23" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/edt_login_email"
        android:enabled="false"
        android:background="@color/colorWhite"
        android:hint="@string/hint_email"
        android:layout_marginTop="30dp"
        android:paddingLeft="5dp"
        android:textColorHint="@color/colorPrimary" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/edt_login_senha"
        android:background="@color/colorWhite"
        android:layout_marginTop="20dp"
        android:hint="@string/hint_kiss_pass"
        android:paddingLeft="5dp"
        android:textColorHint="@color/colorPrimary" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_Login"
        android:id="@+id/button"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0"
        android:layout_marginTop="20dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/lbl_cadastre_se"
        android:id="@+id/textView2"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:textColor="@color/colorWhite"
        android:textAlignment="center"
        android:background="@color/colorPrimary" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnRegistrar"
        android:id="@+id/btn_Registrar"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:textColor="@color/colorPrimary" />
</LinearLayout>
